# guss

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  summary.md
.github/workflows/: ci.yml  pages.yml
docs/: config-di-migration.md  layer-boundaries.md
examples/guss-website/: guss.yaml
examples/guss-website/content/: index.md
examples/guss-website/content/docs/: cli.md  configuration.md  getting-started.md
examples/guss-website/content/internals/: adapters.md  pipeline.md  template-engine.md  value-system.md
examples/guss-website/templates/: docs.html
examples/guss-website/templates/assets/: main.js  style.css
guss-website/: guss.yaml
guss-website/content/: how-guss-works.md
guss-website/content/docs/: configuration.md  getting-started.md  templates.md
guss-website/content/internals/: adapters.md  filters.md  pipeline.md  template-engine.md  value-system.md
guss-website/templates/: base.html  docs.html  landing.html
guss-website/templates/assets/: main.js  style.css
include/guss/adapters/: adapter.hpp  ghost_adapter.hpp  markdown_adapter.hpp  wordpress_adapter.hpp
include/guss/adapters/ghost/: ghost_adapter.hpp  json_parser.hpp
include/guss/adapters/markdown/: markdown_adapter.hpp
include/guss/adapters/rest/: rest_adapter.hpp
include/guss/adapters/wordpress/: wordpress_adapter.hpp
include/guss/builder/: generators.hpp  pipeline.hpp
include/guss/cli/: constants.hpp  progressbar.hpp  progressbar_sink.hpp
include/guss/core/: config.hpp  error.hpp  interfaces.hpp  model.hpp  permalink.hpp  render_item.hpp  value.hpp
include/guss/core/model/: asset.hpp  author.hpp  page.hpp  post.hpp  site.hpp  taxonomy.hpp
include/guss/render/: ast.hpp  compiler.hpp  context.hpp  engine.hpp  filters.hpp  inja_engine.hpp  lexer.hpp  parser.hpp  runtime.hpp  value.hpp
include/guss/render/detail/: html.hpp
include/guss/util/: overloaded.hpp
scripts/: build-themes.sh  new-theme.sh  serve-website.sh
src/adapters/: adapter.cpp
src/adapters/ghost/: ghost_adapter.cpp  json_parser.cpp
src/adapters/markdown/: markdown_adapter.cpp
src/adapters/rest/: rest_adapter.cpp
src/builder/: generators.cpp  pipeline.cpp
src/cli/: main.cpp
src/core/: config.cpp  error.cpp  permalink.cpp  progressbar.cpp  value.cpp
src/render/: compiler.cpp  context.cpp  engine.cpp  filters.cpp  inja_engine.cpp  lexer.cpp  parser.cpp  runtime.cpp  value.cpp
template-engine/: implementation-plan.md
test/templates/: author.html  index.html  page.html  post.html  tag.html
test/templates/assets/: style.css
tests/: test_compiler.cpp  test_config.cpp  test_context.cpp  test_engine.cpp  test_filters.cpp  test_generators.cpp  test_ghost_json.cpp  test_helpers.hpp  test_inheritance.cpp  test_lexer.cpp  test_markdown_adapter.cpp  test_parser.cpp  test_permalink.cpp  test_pipeline_prepare.cpp  test_progressbar.cpp  test_progressbar_sink.cpp  test_render_item.cpp  test_rest_adapter.cpp  test_value.cpp
themes/forge/: base.html  docs.html  landing.html  package.json
themes/forge/assets/: highlight.js  hljs-light.css  main.js  style.css
themes/forge/src/: highlight.js  main.js  style.css  toc.js
themes/pinguin/: author.html  base.html  index.html  package.json  page.html  post.html  tag.html
themes/pinguin/assets/: highlight.js  hljs-dark.css  main.js  reading-progress.js  reveal.js  style.css  toc.js
themes/pinguin/partials/: footer.html
themes/pinguin/src/: highlight.js  hljs-dark.css  hljs-light.css  main.js  reveal.js  style.css  toc.js
